# kalshi-bot

./: .env.example  .gitignore  Makefile  README.md  cli.py  pyproject.toml  requirements.txt
.claude/: settings.json
design_reference/: Kalshi Bot Dashboard.html  app.jsx  charts.jsx  chrome.jsx  data.jsx  right-column.jsx  styles.css  tables.jsx  tweaks-panel.jsx
scripts/: backtest_gate.py  dashboard.py  init_db.py  run_bot.py  run_ws_collector.py  scan_diagnostic.py  seed_universe.py  ws_diagnostic.py
src/backtest/: metrics.py  portfolio.py  replay.py
src/config/: constants.py  settings.py
src/core/: auth.py  client.py  execution.py  orderbook.py  reconcile.py  risk.py  risk_stub.py  scanner.py  scanner_rules.py  sizing.py  types.py  universe.py  ws.py
src/modules/: base.py
src/observability/: exporter.py  metrics.py
src/orchestrator/: heartbeat.py  loop.py  main.py
src/storage/: db.py  orderbook_writer.py  schema.sql
tasks/: todo.md
tests/fixtures/: orderbook_delta_sequence.json
tests/integration/: test_order_roundtrip.py
tests/unit/: test_execution_idempotency.py  test_fees.py  test_live_trading_gate.py  test_metrics.py  test_observability.py  test_orchestrator.py  test_orderbook_apply.py  test_reconcile.py  test_risk.py  test_scanner.py  test_signing.py  test_sizing.py  test_universe_classify.py
